server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-17.snap
---
source: main-api/src/search/search_executor/mod.rs
description: ""
expression: actual
info: mi hs 1 should get 5602.EG.001
---
- facet: sites_buildings
  entries:
    - id: "5602"
      type: building
      name: "\u0019Hörsaal\u0017 \u00191\u0017 (BT02)"
      subtext: Gebäudeteil
    - id: mi
      type: joined_building
      name: "Fakultät Mathematik & Informatik (FMI oder \u0019MI\u0017)"
      subtext: Gebäudekomplex
    - id: "5605"
      type: building
      name: Finger 05 (BT05)
      subtext: Gebäudeteil
    - id: "5606"
      type: building
      name: Finger 06 (BT06)
      subtext: Gebäudeteil
  n_visible: 1
  estimatedTotalHits: 14
- facet: rooms
  entries:
    - id: 5602.EG.001
      type: room
      name: "5602.EG.001 ( \u0019MI\u0017 \u0019HS\u0017 \u00191\u0017,  Friedrich L. Bauer \u0019Hörsaal\u0017)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.02.001@5602
    - id: 5602.EG.002
      type: room
      name: "5602.EG.002 ( \u0019MI\u0017 \u0019Hörsaal\u0017 Regieraum)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.02.002@5602
    - id: 5602.U1.001
      type: room
      name: 5602.U1.001 ( Technikraum)
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: "-1.02.001@5602"
    - id: 5602.U1.004
      type: room
      name: 5602.U1.004 ( Treppe im Freien)
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: "-1.02.004@5602"
    - id: 5604.EG.011
      type: room
      name: "5604.EG.011 ( \u0019MI\u0017 \u0019Hörsaal\u0017 2)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.04.011@5604
    - id: 5606.EG.011
      type: room
      name: "5606.EG.011 ( \u0019MI\u0017 \u0019Hörsaal\u0017 3)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.011@5606
    - id: 5601.EG.001
      type: room
      name: 5601.EG.001 ( Magistrale)
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.01.001@5601
    - id: 5603.01.011
      type: room
      name: 5603.01.011 ( Gruppenarbeitsraum)
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 01.03.011@5603
    - id: 5603.01.031B
      type: room
      name: 5603.01.031B ( Einzelarbeitsraum)
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 01.03.031B@5603
  n_visible: 9
  estimatedTotalHits: 1000
