server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-23.snap
---
source: main-api/src/search/search_executor/mod.rs
description: ""
expression: actual
info: Raum 0337 mw should get 5503.EG.337
---
- facet: rooms
  entries:
    - id: 5503.EG.337
      type: room
      name: 5503.EG.337 (Seminarraum)
      subtext: "garching, Maschinenwesen (MW)"
      subtext_bold: 0337@5503
    - id: 0503.EG.337
      type: room
      name: 0503.EG.337 ( Büro)
      subtext: "stammgelände, Thierschbau (Z3)"
      subtext_bold: 0337@0503
    - id: 2334.EG.128
      type: room
      name: "2334.EG.128 ( (34.\u00190\u0017.\u0019337\u0017) Büro)"
      subtext: "campus-im-olympiapark-sz, CiO/SG Institute West, Bibliothek"
      subtext_bold: 00.2334.128@2334
    - id: 0509.EG.980
      type: room
      name: "0509.EG.980 (Audimax, Werner-von-Siemens-Hörsaal)"
      subtext: "stammgelände, Wienandsbau (Z9)"
      subtext_bold: 0980@0509
    - id: 8120.EG.001
      type: room
      name: 8120.EG.001 (Hörsaal im Galileo)
      subtext: "garching, Galileo"
      subtext_bold: Hörsaal@8120
    - id: 8120.01.101
      type: room
      name: 8120.01.101 (Audimax im Galileo)
      subtext: "garching, Galileo"
      subtext_bold: Audimax@8120
    - id: 0101.02.179
      type: room
      name: 0101.02.179 (Wilhelm-Nusselt-Hörsaal)
      subtext: "stammgelände, U-Trakt (N1)"
      subtext_bold: N1179@0101
    - id: 0101.02.189
      type: room
      name: 0101.02.189 (Hans-Piloty-Hörsaal)
      subtext: "stammgelände, U-Trakt (N1)"
      subtext_bold: N1189@0101
    - id: 0101.02.190
      type: room
      name: 0101.02.190 (Hans-Heinrich-Meinke-Hörsaal)
      subtext: "stammgelände, U-Trakt (N1)"
      subtext_bold: N1190@0101
  n_visible: 9
  estimatedTotalHits: 1000
- facet: sites_buildings
  entries:
    - id: "0109"
      type: building
      name: "Reflexionsarmer \u0019Raum\u0017 (N9)"
      subtext: Gebäude
  n_visible: 0
  estimatedTotalHits: 1
