server/main-api/src/search/search_executor/snapshots/navigatum_main_api__search__search_executor__test__good_queries-24.snap
---
source: main-api/src/search/search_executor/mod.rs
description: "old name before the NS renamings was 'MW 0001, Gustav-Niemann-Hörsaal', changed in Q1 24"
expression: actual
info: niemann should get 5510.EG.001
---
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
- facet: sites_buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: 0
